--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/Buddy2G/package.json.git"
   },
-  "author": "Alaa El Abed",
+  "author": "Jane Doe",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Buddy2G/package.json/issues"
