--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "project",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Buddy2G/package.json.git"
-  },
-  "author": "Jane Doe",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Buddy2G/package.json/issues"
-  },
-  "homepage": "https://github.com/Buddy2G/package.json#readme"
+	"name": "fcc-learn-npm-package-json",
+	"dependencies": {
+		"express": "^4.14.0"
+	},
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://idontknow/todo.git"
+	}
 }
